# camera-rtsp-service

./: .gitignore  CHANGELOG.md  INSTALL.md  MANUAL.md  README.md  camera-rtsp.service.example  config.example.ini  config.ini  install_service.sh  p.service --since 2 minutes ago  prep.sh  pyproject.toml  requirements.txt  run.sh  setup_env.sh  uninstall_service.sh
.github/workflows/: ci.yml
scripts/: install.sh  prep.sh  run-rtsp.sh  run_rtsp.sh  uninstall.sh
src/: config_loader.py  main.py  rtsp_server.py
src/camera_rtsp_service/: __init__.py  cli.py  config.example.ini  config.py  detect.py  logging_setup.py  pipeline.py  server.py
tests/: test_config_layering.py  test_detect_no_devices.py  test_pipeline_builder.py
