[project]
name = "camera-rtsp-service"
version = "0.3.1"
license = "MIT"
description = "RTSP streaming service for V4L2 cameras with auto-detect, hardware encoding, metrics, and systemd integration"
authors = [{name="Your Name"}]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["gstreamer", "rtsp", "camera", "v4l2", "streaming"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Video :: Capture",
  "Intended Audience :: System Administrators",
  "Environment :: No Input/Output (Daemon)",
]
dependencies = [
  "packaging>=23.0",
  "pydantic>=2.5.0",
  "psutil>=5.9.0",
  "jinja2>=3.1.0",
  "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "mypy>=1.10.0",
  "ruff>=0.5.0",
  "types-psutil",
]

[project.scripts]
cam-rtsp = "camera_rtsp_service.cli:main"

[project.urls]
Homepage = "https://github.com/kyleengza/camera-rtsp-service"
Documentation = "https://github.com/kyleengza/camera-rtsp-service#readme"
Changelog = "https://github.com/kyleengza/camera-rtsp-service/blob/main/CHANGELOG.md"
Issues = "https://github.com/kyleengza/camera-rtsp-service/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["camera_rtsp_service*"]

[tool.setuptools.package-data]
"camera_rtsp_service" = ["../MANUAL.md", "../INSTALL.md", "../CHANGELOG.md", "config.example.ini"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E","F","I","N","UP","B","SIM","ARG"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["camera_rtsp_service"]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings"
pythonpath = ["src"]
